--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "query-string": "^8.1.0",
     "uuid": "^8.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SimonLerouxx/TP3_SimonLeroux_NodeJs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SimonLerouxx/TP3_SimonLeroux_NodeJs/issues"
+  },
+  "homepage": "https://github.com/SimonLerouxx/TP3_SimonLeroux_NodeJs#readme"
 }
